# CamTest

./: CMakeLists.txt  README.md  version.h.in
src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
